--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -122,8 +122,8 @@
                                         ประกาศ
                                     </h5>
                                     <p style="padding-bottom: 24px; color: #ff0000">
-                                        <b>วันอาทิตย์ที่ 10 สิงหา</b> เรียน online อย่างเดียว (เนื่องจากทางมหาวิทยาลัยปิดตึก)<br>
-                                        ต้นคาบ 8:10 - 8:30 <b>มี quiz</b> ทำในออนไลน์ (ผ่านมือถือได้) ออกคล้ายการบ้าน 1 แบบมีส่วนที่ทำมาให้แล้ว แค่เติมตัวเลขลงไปในช่องสี่เหลี่ยม<br>
+                                        เนื่องด้วยความผิดพลาดของระบบ Microsoft Form ที่ทำบน Microsoft Teams ทำให้มีหลายคนไม่สามารถส่งควิซได้ จึงให้คะแนนฟรี 3 คะแนนกับทุกคน<br>
+                                        ต้นคาบ 8:10 - 8:40 <b>มี quiz 2</b> ทำในกระดาษ ออกคล้ายการบ้าน 2 แบบมีส่วนที่ทำมาให้แล้ว แค่อธิบายความหมายของตาราง simplex<br>
                                     </p>
 
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
@@ -144,9 +144,18 @@
                                     </h4>
                                     <ul style="padding-bottom: 24px;">
                                         <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
-                                        <li><b>ครั้งที่ 1 (3 สิงหาคม)</b> : <span style="text-decoration: line-through;">แนวคิดพื้นฐานการวิเคราะห์เชิงปริมาณเพื่อการตัดสินใจเชิงธุรกิจ,</span> กำหนดการเชิงเส้น (Linear Programming) Part 1 (การเขียนโมเดล และการแก้ปัญหาด้วยรูปภาพ) <a href="../assets/handout/Quantitative_Analysis_250803.pdf">Note</a></li>
-                                        <li><b>ครั้งที่ 2 (10 สิงหาคม)</b> : LP Part 2 (Simplex method), ทฤษฎีการตัดสินใจ (Decision Theory) [Hybrid]</li>
-                                        <li><b>ครั้งที่ 3 (17 สิงหาคม)</b> : การจำลองสถานการณ์ (Simulation Modeling)</li>
+                                        <li><b>ครั้งที่ 1 (3 สิงหาคม)</b> : <span style="text-decoration: line-through;">แนวคิดพื้นฐานการวิเคราะห์เชิงปริมาณเพื่อการตัดสินใจเชิงธุรกิจ,</span> กำหนดการเชิงเส้น (Linear Programming) Part 1 (การเขียนโมเดล และการแก้ปัญหาด้วยรูปภาพ)
+                                            <ul style="padding-left: 25px;">
+                                                <!-- <li>การเข้าชั้นเรียน (8%): ถ้าไม่มีสอบย่อยเช็คชื่อเข้าเรียนตอน 08:30, ถ้ามีสอบย่อยนับ</li> -->
+                                                <li>Note: <a href="../assets/handout/Quantitative_Analysis_250803.pdf">download</a></li>
+                                            </ul></li>
+                                        <li><b>ครั้งที่ 2 (10 สิงหาคม)</b> : LP Part 2 (Simplex method), <span style="text-decoration: line-through;">ทฤษฎีการตัดสินใจ (Decision Theory)</span> [Online]
+                                            <ul style="padding-left: 25px;">
+                                                <!-- <li>การเข้าชั้นเรียน (8%): ถ้าไม่มีสอบย่อยเช็คชื่อเข้าเรียนตอน 08:30, ถ้ามีสอบย่อยนับ</li> -->
+                                                <li>Note: <a href="../assets/handout/Quantitative_Analysis_250810.pdf">download</a></li>
+                                                <li>Recording: <a href="https://youtu.be/1xKfYBX1HgE">link</a></li>
+                                            </ul></li>
+                                        <li><b>ครั้งที่ 3 (17 สิงหาคม)</b> : ทฤษฎีการตัดสินใจ (Decision Theory), การจำลองสถานการณ์ (Simulation Modeling)</li>
                                         <li><b>ครั้งที่ 4 (24 สิงหาคม)</b> : <span style="color: red;">สอบกลางภาค (ตอนเช้า)</span> + การวิเคราะห์มาร์คอฟ (Markov Analysis) [Hybrid]</li>
                                         <li><b>ครั้งที่ 5 (31 สิงหาคม)</b> : ทฤษฎีการแข่งขัน (Game Theory)</li>
                                         <li><b>ครั้งที่ 6 (7 กันยายน)</b> : การทำนาย (Forecasting)</li>
@@ -174,13 +183,14 @@
                                     <ul style="padding-bottom: 24px;">
                                         <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
                                         <li><b>การบ้าน 1</b>: การเขียนแบบจำลอง และแก้ปัญหาโจทย์ 1.1.3 และโจทย์ Assignment (due date 9 สิงหาคม 23:59 น.) <a href="../assets/handout/homework/hw1_sol.pdf">(เฉลย)</a></li>
+                                        <li><b>การบ้าน 2</b>: Simplex method (due date 16 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw2.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw2_sol.pdf">(เฉลย)</a></li>
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         สอบย่อย
                                     </h4>
                                     <ul style="padding-bottom: 24px;">
                                         <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
-                                        <li><b>สอบย่อยครั้งที่ 1</b>: การเขียนกำหนดการเชิงเส้น <a style="color: rgb(179, 179, 179)" href="../assets/handout/exam/quiz1.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/exam/quiz1_sol.pdf">(เฉลย)</a></li>
+                                        <li><b>สอบย่อยครั้งที่ 1</b>: การเขียนกำหนดการเชิงเส้น <a href="../assets/handout/exam/quiz1.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/exam/quiz1_sol.pdf">(เฉลย)</a></li>
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         วิดีโอเรียนเพิ่มเติม
