--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -200,7 +200,7 @@
                                         <li> - <a href="https://www.youtube.com/watch?v=5eGSsYbCywo">คณิตศาสตร์ (1) การวาดเส้นตรงจากสมการเส้นตรง</a></li>
                                         <li> - <a href="https://www.youtube.com/watch?v=ftTM9zZ8yr8">คณิตศาสตร์ (2) การแก้ระบบสมการเชิงเส้นหาจุดตัดระหว่างเส้นตรง</a></li>
                                         <li> - <a href="https://youtu.be/5zaD5F6JSD0">ซิมเพลกซ์สำหรับโจทย์หาค่าต่ำสุด</a></li>
-                                        <li> - <a href="https://youtu.be/Rv5KO410a1E">ซิมเพลกซ์แบบมีเงื่อนไขส่วนเกิน</a>: <a href="../assets/handout/simplex-surplus-artificial.pdf">เอกสารประกอบการสอน</a></li>
+                                        <li> - <a href="https://youtu.be/Rv5KO410a1E">ซิมเพลกซ์แบบมีเงื่อนไขส่วนเกิน</a>: สามารถดาวน์โหลดเอกสารประกอบการสอนได้ที่ <a href="../assets/handout/simplex-surplus-artificial.pdf">เอกสารประกอบการสอน</a></li>
                                     </ul>
                                 </div>
             </div>
