--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -154,6 +154,7 @@
                                                 <!-- <li>การเข้าชั้นเรียน (8%): ถ้าไม่มีสอบย่อยเช็คชื่อเข้าเรียนตอน 08:30, ถ้ามีสอบย่อยนับ</li> -->
                                                 <li>Note: <a href="../assets/handout/Quantitative_Analysis_250810.pdf">download</a></li>
                                                 <li>Recording: <a href="https://youtu.be/1xKfYBX1HgE">link</a></li>
+                                                <li>เรียนเพิ่มเติม: <a href="https://youtu.be/5zaD5F6JSD0">ซิมเพลกซ์สำหรับโจทย์หาค่าต่ำสุด</a> | <a href="https://youtu.be/Rv5KO410a1E">ซิมเพลกซ์แบบมีเงื่อนไขส่วนเกิน</a></li>
                                             </ul></li>
                                         <li><b>ครั้งที่ 3 (17 สิงหาคม)</b> : ทฤษฎีการตัดสินใจ (Decision Theory), การจำลองสถานการณ์ (Simulation Modeling)</li>
                                         <li><b>ครั้งที่ 4 (24 สิงหาคม)</b> : <span style="color: red;">สอบกลางภาค (ตอนเช้า)</span> + การวิเคราะห์มาร์คอฟ (Markov Analysis) [Hybrid]</li>
