--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -192,6 +192,7 @@
                                     <ul style="padding-bottom: 24px;">
                                         <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
                                         <li><b>สอบย่อยครั้งที่ 1</b>: การเขียนกำหนดการเชิงเส้น <a href="../assets/handout/exam/quiz1.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/exam/quiz1_sol.pdf">(เฉลย)</a></li>
+                                        <li><b>สอบย่อยครั้งที่ 2</b>: การทำซิมเพล็กซ์ <a style="color: rgb(179, 179, 179)" href="../assets/handout/exam/quiz2.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/exam/quiz2_sol.pdf">(เฉลย)</a></li>
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         วิดีโอเรียนเพิ่มเติม
