--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -157,6 +157,10 @@
                                                 <li>เรียนเพิ่มเติม: <a href="https://youtu.be/5zaD5F6JSD0">ซิมเพลกซ์สำหรับโจทย์หาค่าต่ำสุด</a> | <a href="https://youtu.be/Rv5KO410a1E">ซิมเพลกซ์แบบมีเงื่อนไขส่วนเกิน</a></li>
                                             </ul></li>
                                         <li><b>ครั้งที่ 3 (17 สิงหาคม)</b> : ทฤษฎีการตัดสินใจ (Decision Theory), การจำลองสถานการณ์ (Simulation Modeling)</li>
+                                            <ul style="padding-left: 25px;">
+                                                <!-- <li>การเข้าชั้นเรียน (8%): ถ้าไม่มีสอบย่อยเช็คชื่อเข้าเรียนตอน 08:30, ถ้ามีสอบย่อยนับ</li> -->
+                                                <li>Note: <a href="../assets/handout/Quantitative_Analysis_250817.pdf">download</a></li>
+                                            </ul></li>
                                         <li><b>ครั้งที่ 4 (24 สิงหาคม)</b> : <span style="color: red;">สอบกลางภาค (ตอนเช้า)</span> + การวิเคราะห์มาร์คอฟ (Markov Analysis) [Hybrid]</li>
                                         <li><b>ครั้งที่ 5 (31 สิงหาคม)</b> : ทฤษฎีการแข่งขัน (Game Theory)</li>
                                         <li><b>ครั้งที่ 6 (7 กันยายน)</b> : การทำนาย (Forecasting)</li>
@@ -185,6 +189,7 @@
                                         <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
                                         <li><b>การบ้าน 1</b>: การเขียนแบบจำลอง และแก้ปัญหาโจทย์ 1.1.3 และโจทย์ Assignment (due date 9 สิงหาคม 23:59 น.) <a href="../assets/handout/homework/hw1_sol.pdf">(เฉลย)</a></li>
                                         <li><b>การบ้าน 2</b>: Simplex method (due date 16 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw2.pdf">(โจทย์)</a> <a href="../assets/handout/homework/hw2_sol.pdf">(เฉลย)</a></li>
+                                        <li><b>การบ้าน 3</b>: Decision Theory and Simulation (due date 23 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw3.pdf">(โจทย์)</a> <a href="../assets/handout/homework/hw2_sol.pdf">(เฉลย)</a></li>
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         สอบย่อย
