--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -122,8 +122,7 @@
                                         ประกาศ
                                     </h5>
                                     <p style="padding-bottom: 24px; color: #ff0000">
-                                        เนื่องด้วยความผิดพลาดของระบบ Microsoft Form ที่ทำบน Microsoft Teams ทำให้มีหลายคนไม่สามารถส่งควิซได้ จึงให้คะแนนฟรี 3 คะแนนกับทุกคน<br>
-                                        ต้นคาบ 8:10 - 8:40 <b>มี quiz 2</b> ทำในกระดาษ ออกคล้ายการบ้าน 2 แบบมีส่วนที่ทำมาให้แล้ว แค่อธิบายความหมายของตาราง simplex<br>
+                                        สัปดาห์หน้า (วันที่ 24 สิงหาคม 2568) จะมีการสอบกลางภาคในช่วงเช้า เวลา 08:30 - 11:30 น. หลังจากนั้นจะมีการเรียนการสอนออนไลน์ในช่วงบ่าย จะประกาศแจ้งเวลาเรียนอีกทีหนึ่ง
                                     </p>
 
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
@@ -161,7 +160,7 @@
                                                 <!-- <li>การเข้าชั้นเรียน (8%): ถ้าไม่มีสอบย่อยเช็คชื่อเข้าเรียนตอน 08:30, ถ้ามีสอบย่อยนับ</li> -->
                                                 <li>Note: <a href="../assets/handout/Quantitative_Analysis_250817.pdf">download</a></li>
                                             </ul></li>
-                                        <li><b>ครั้งที่ 4 (24 สิงหาคม)</b> : <span style="color: red;">สอบกลางภาค (ตอนเช้า)</span> + การวิเคราะห์มาร์คอฟ (Markov Analysis) [Hybrid]</li>
+                                        <li><b>ครั้งที่ 4 (24 สิงหาคม)</b> : <span style="color: red;">สอบกลางภาค (ตอนเช้า)</span> + การวิเคราะห์มาร์คอฟ (Markov Analysis) [Online]</li>
                                         <li><b>ครั้งที่ 5 (31 สิงหาคม)</b> : ทฤษฎีการแข่งขัน (Game Theory)</li>
                                         <li><b>ครั้งที่ 6 (7 กันยายน)</b> : การทำนาย (Forecasting)</li>
                                         <li><b>ครั้งที่ 7 (14 กันยายน)</b> : ทฤษฎีแถวคอย (Queue Theory)</li>
