--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -122,7 +122,7 @@
                                         ประกาศ
                                     </h5>
                                     <p style="padding-bottom: 24px; color: #ff0000">
-                                        สัปดาห์หน้า (วันที่ 24 สิงหาคม 2568) จะมีการสอบกลางภาคในช่วงเช้า เวลา 08:30 - 11:30 น. หลังจากนั้นจะมีการเรียนการสอนออนไลน์ในช่วงบ่าย จะประกาศแจ้งเวลาเรียนอีกทีหนึ่ง
+                                        สัปดาห์หน้า (วันที่ 24 สิงหาคม 2568) จะมีการสอบกลางภาคออนไลน์ในช่วงเช้า เวลา 08:30 - 11:30 น. หลังจากนั้นจะมีการเรียนการสอนออนไลน์ในช่วงบ่าย จะประกาศแจ้งเวลาเรียนอีกทีหนึ่ง
                                     </p>
 
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
