--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -122,7 +122,7 @@
                                         ประกาศ
                                     </h5>
                                     <p style="padding-bottom: 24px; color: #ff0000">
-                                        สัปดาห์หน้า (วันที่ 24 สิงหาคม 2568) จะมีการสอบกลางภาคออนไลน์ในช่วงเช้า เวลา 08:30 - 11:30 น. หลังจากนั้นจะมีการเรียนการสอนออนไลน์ในช่วงบ่าย จะประกาศแจ้งเวลาเรียนอีกทีหนึ่ง
+                                        สัปดาห์หน้า (วันที่ 24 สิงหาคม 2568) จะมีการสอบกลางภาคออนไลน์ในช่วงเช้า เวลา 08:30 - 10:30 น. หลังจากนั้นจะมีการเรียนการสอนออนไลน์เวลา 13:40 - 17:00 น.
                                     </p>
 
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
@@ -191,12 +191,13 @@
                                         <li><b>การบ้าน 3</b>: Decision Theory and Simulation (due date 23 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw3.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw3_sol.pdf">(เฉลย)</a></li>
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
-                                        สอบย่อย
+                                        ข้อสอบ
                                     </h4>
                                     <ul style="padding-bottom: 24px;">
                                         <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
                                         <li><b>สอบย่อยครั้งที่ 1</b>: การเขียนกำหนดการเชิงเส้น <a href="../assets/handout/exam/quiz1.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/exam/quiz1_sol.pdf">(เฉลย)</a></li>
                                         <li><b>สอบย่อยครั้งที่ 2</b>: การทำซิมเพล็กซ์ <a href="../assets/handout/exam/quiz2.pdf">(โจทย์)</a> <a href="../assets/handout/exam/quiz2_sol.pdf">(เฉลย)</a></li>
+                                        <!-- <li><b>สอบกลางภาค</b>: <a href="../assets/handout/exam/midterm-1.pdf">(โจทย์)</a> -->
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         วิดีโอเรียนเพิ่มเติม
