--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>ปพนธีร์ แย้มโชติ | Southeast Asia University</title>
+    <title>ดารวิเคราะห์เชิงปริมาณสำหรับธุรกิจ | ปพนธีร์ แย้มโชติ | Southeast Asia University</title>
     <meta name="description" content="รายละเอียดรายวิชาที่สอนโดย ปพนธีร์ แย้มโชติ อาจารย์ประจำสาขาระบบสารสนเทศเพื่อธุรกิจดิจิทัล มหาวิทยาลัยเอเชียอาคเนย์ พร้อมตารางสอนและเอกสารประกอบการเรียน"/>
     <meta name="keywords"
                 content="Southeast Asia University, ปพนธีร์ แย้มโชติ, สอนมหาวิทยาลัย, อาจารย์" />
