--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>ดารวิเคราะห์เชิงปริมาณสำหรับธุรกิจ | ปพนธีร์ แย้มโชติ | Southeast Asia University</title>
+    <title>720201 การวิเคราะห์เชิงปริมาณสำหรับธุรกิจ | Southeast Asia University | ปพนธีร์ แย้มโชติ</title>
     <meta name="description" content="รายละเอียดรายวิชาที่สอนโดย ปพนธีร์ แย้มโชติ อาจารย์ประจำสาขาระบบสารสนเทศเพื่อธุรกิจดิจิทัล มหาวิทยาลัยเอเชียอาคเนย์ พร้อมตารางสอนและเอกสารประกอบการเรียน"/>
     <meta name="keywords"
-                content="Southeast Asia University, ปพนธีร์ แย้มโชติ, สอนมหาวิทยาลัย, อาจารย์" />
+                content="การวิเคราะห์เชิงปริมาณสำหรับธุรกิจ, quantitative analysis ,Southeast Asia University, ปพนธีร์ แย้มโชติ, สอนมหาวิทยาลัย, อาจารย์" />
     <link rel="canonical" href="https://yamchote-ppt.github.io/phaphontee-yamchote/Teaching.html" />
 
     <meta property="og:type"        content="article" />
