--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -206,8 +206,11 @@
                                         <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
                                         <li> - <a href="https://www.youtube.com/watch?v=5eGSsYbCywo">คณิตศาสตร์ (1) การวาดเส้นตรงจากสมการเส้นตรง</a></li>
                                         <li> - <a href="https://www.youtube.com/watch?v=ftTM9zZ8yr8">คณิตศาสตร์ (2) การแก้ระบบสมการเชิงเส้นหาจุดตัดระหว่างเส้นตรง</a></li>
+                                        <li> - <a href="https://youtu.be/ZD0aPqArK5g">การดำเนินการตามแถวเพื่อเปลี่ยน pivot ใน Simplex</a></li>
                                         <li> - <a href="https://youtu.be/5zaD5F6JSD0">ซิมเพลกซ์สำหรับโจทย์หาค่าต่ำสุด</a></li>
                                         <li> - <a href="https://youtu.be/Rv5KO410a1E">ซิมเพลกซ์แบบมีเงื่อนไขส่วนเกิน</a>: สามารถดาวน์โหลดเอกสารประกอบการสอนได้ที่ <a href="../assets/handout/simplex-surplus-artificial.pdf">เอกสารประกอบการสอน</a></li>
+                                        <li> - <a href="https://youtu.be/7GYZ78cf6M8">simplex เงื่อนไขเท่ากับ</a></li>
+                                        <li> - <a href="https://youtu.be/sZaQwmwPR_g">Simplex โจทย์ผสม</a></li>
                                     </ul>
                                 </div>
             </div>
