--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -136,7 +136,8 @@
                                     </h4>
                                     <ul style="padding-bottom: 24px;">
                                         <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
-                                        <li><a href="../assets/handout/Quantitative_Analysis Chap 1-3.pdf" target="_blank">หนังสือ</a> (update at 28 July 2025)</li>
+                                        <li><a href="../assets/handout/Quantitative_Analysis Chap 1-3.pdf" target="_blank">หนังสือกลางภาค</a> (update at 28 July 2025)</li>
+                                        <li><a href="../assets/handout/Quantitative_Analysis - markov.pdf" target="_blank">หนังสือ (บทมาร์คอฟ)</a> (update at 24 August 2025)</li>
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         ตารางสอน
