--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -162,6 +162,11 @@
                                                 <li>Note: <a href="../assets/handout/Quantitative_Analysis_250817.pdf">download</a></li>
                                             </ul></li>
                                         <li><b>ครั้งที่ 4 (24 สิงหาคม)</b> : <span style="color: red;">สอบกลางภาค (ตอนเช้า)</span> + การวิเคราะห์มาร์คอฟ (Markov Analysis) [Online]</li>
+                                            <ul style="padding-left: 25px;">
+                                                <!-- <li>การเข้าชั้นเรียน (8%): ถ้าไม่มีสอบย่อยเช็คชื่อเข้าเรียนตอน 08:30, ถ้ามีสอบย่อยนับ</li> -->
+                                                <li>Note: <a href="../assets/handout/Quantitative_Analysis_250824.pdf">download</a></li>
+                                                <li>Recording: <a style="color: rgb(179, 179, 179)" href="...">link</a></li>
+                                            </ul></li>
                                         <li><b>ครั้งที่ 5 (31 สิงหาคม)</b> : ทฤษฎีการแข่งขัน (Game Theory)</li>
                                         <li><b>ครั้งที่ 6 (7 กันยายน)</b> : การทำนาย (Forecasting)</li>
                                         <li><b>ครั้งที่ 7 (14 กันยายน)</b> : ทฤษฎีแถวคอย (Queue Theory)</li>
@@ -190,6 +195,7 @@
                                         <li><b>การบ้าน 1</b>: การเขียนแบบจำลอง และแก้ปัญหาโจทย์ 1.1.3 และโจทย์ Assignment (due date 9 สิงหาคม 23:59 น.) <a href="../assets/handout/homework/hw1_sol.pdf">(เฉลย)</a></li>
                                         <li><b>การบ้าน 2</b>: Simplex method (due date 16 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw2.pdf">(โจทย์)</a> <a href="../assets/handout/homework/hw2_sol.pdf">(เฉลย)</a></li>
                                         <li><b>การบ้าน 3</b>: Decision Theory and Simulation (due date 23 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw3.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw3_sol.pdf">(เฉลย)</a></li>
+                                        <li><b>การบ้าน 4</b>: Markov Analysis (due date 30 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw4.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw4_sol.pdf">(เฉลย)</a></li>
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         ข้อสอบ
