--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -118,12 +118,12 @@
         <div style="flex: 3;">
             <div class="container">
                 <div class="container" style="background: #fff; border-radius: 0.7rem; padding: 1.5rem; color: #232323;">
-                                    <h5 style="color: #ff0000; margin-bottom: 0.5rem; border-left: 4px solid #ff0000;background-color: #fcc6c6; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
+                                    <!-- <h5 style="color: #ff0000; margin-bottom: 0.5rem; border-left: 4px solid #ff0000;background-color: #fcc6c6; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         ประกาศ
                                     </h5>
                                     <p style="padding-bottom: 24px; color: #ff0000">
                                         สัปดาห์หน้า (วันที่ 24 สิงหาคม 2568) จะมีการสอบกลางภาคออนไลน์ในช่วงเช้า เวลา 08:30 - 10:30 น. หลังจากนั้นจะมีการเรียนการสอนออนไลน์เวลา 13:40 - 17:00 น.
-                                    </p>
+                                    </p> -->
 
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         คำอธิบายรายวิชา
