--- a/teaching.html
+++ b/teaching.html
@@ -64,7 +64,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body style="background-color: #181818">
     <style>
         :root {
             --darkblue: #002147;
@@ -129,6 +129,7 @@
             <p style="color: white; margin-bottom: 1.5rem;">Department of Information Systems for Digital Business, Southeast Asia University</p>
         </div>
     </section>
+
     <section id="tutor-contact" style="background-color: #181818; color: #fff; padding: 2.5rem 0;">
         <section id="contact" style="background-color: #181818; color: #fff; padding: 2.5rem 0;">
     <div class="container" style="display: flex; gap: 2rem;">
@@ -210,12 +211,18 @@
         </div>
         </div>
     </div>
-</section>
-</section>
+        </section>
+    </section>
 
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
+
+    <footer style="position: fixed; left: 0; bottom: 0; width: 100%; background: var(--darkblue); color: var(--gold); z-index: 100;">
+        <div class="container">
+            <p class="text-center" style="margin: 0;">© 2025 Southeast Asia University. All rights reserved.</p>
+        </div>
+    </footer>
 
 </body>
 </html>
