--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -64,7 +64,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
-<body>
+<body style="background-color: #181818">
     <style>
         :root {
             --darkblue: #002147;
@@ -165,7 +165,7 @@
                                             <ul style="padding-left: 25px;">
                                                 <!-- <li>การเข้าชั้นเรียน (8%): ถ้าไม่มีสอบย่อยเช็คชื่อเข้าเรียนตอน 08:30, ถ้ามีสอบย่อยนับ</li> -->
                                                 <li>Note: <a href="../assets/handout/Quantitative_Analysis_250824.pdf">download</a></li>
-                                                <li>Recording: <a style="color: rgb(179, 179, 179)" href="...">link</a></li>
+                                                <li>Recording: <a style="color: rgb(179, 179, 179)" href="https://youtu.be/hN_VQhKP2zk">link</a></li>
                                             </ul></li>
                                         <li><b>ครั้งที่ 5 (31 สิงหาคม)</b> : ทฤษฎีการแข่งขัน (Game Theory)</li>
                                         <li><b>ครั้งที่ 6 (7 กันยายน)</b> : การทำนาย (Forecasting)</li>
@@ -230,5 +230,10 @@
     <script src="../assets/js/bootstrap.min.js"></script>
     <script src="../assets/js/script.js"></script>
 
+    <footer style="position: fixed; left: 0; bottom: 0; width: 100%; background: var(--darkblue); color: var(--gold); z-index: 100;">
+        <div class="container">
+            <p class="text-center" style="margin: 0;">© 2025 Southeast Asia University. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
