--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -118,12 +118,12 @@
         <div style="flex: 3;">
             <div class="container">
                 <div class="container" style="background: #fff; border-radius: 0.7rem; padding: 1.5rem; color: #232323;">
-                                    <!-- <h5 style="color: #ff0000; margin-bottom: 0.5rem; border-left: 4px solid #ff0000;background-color: #fcc6c6; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
+                                    <h5 style="color: #ff0000; margin-bottom: 0.5rem; border-left: 4px solid #ff0000;background-color: #fcc6c6; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         ประกาศ
                                     </h5>
                                     <p style="padding-bottom: 24px; color: #ff0000">
-                                        สัปดาห์หน้า (วันที่ 24 สิงหาคม 2568) จะมีการสอบกลางภาคออนไลน์ในช่วงเช้า เวลา 08:30 - 10:30 น. หลังจากนั้นจะมีการเรียนการสอนออนไลน์เวลา 13:40 - 17:00 น.
-                                    </p> -->
+                                        วันที่ 31 สิงหาคม 2568 มีการสอบย่อยในช่วงเวลา 08:10 - 08:40 น. ไม่มีการสอบย้อนหลัง เช็คคะแนนเข้าเรียน(คะแนนฟรี 1 คะแนน)จากการส่งสอบย่อยครับ
+                                    </p>
 
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         คำอธิบายรายวิชา
@@ -138,6 +138,7 @@
                                         <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
                                         <li><a href="../assets/handout/Quantitative_Analysis Chap 1-3.pdf" target="_blank">หนังสือกลางภาค</a> (update at 28 July 2025)</li>
                                         <li><a href="../assets/handout/Quantitative_Analysis - markov.pdf" target="_blank">หนังสือ (บทมาร์คอฟ)</a> (update at 24 August 2025)</li>
+                                        <li><a href="../assets/handout/Quantitative_Analysis - forecasting.pdf" target="_blank">หนังสือ (บทการทำนาย)</a> (update at 30 August 2025)</li>
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         ตารางสอน
@@ -167,8 +168,8 @@
                                                 <li>Note: <a href="../assets/handout/Quantitative_Analysis_250824.pdf">download</a></li>
                                                 <li>Recording: <a href="https://youtu.be/hN_VQhKP2zk">link</a></li>
                                             </ul></li>
-                                        <li><b>ครั้งที่ 5 (31 สิงหาคม)</b> : ทฤษฎีการแข่งขัน (Game Theory)</li>
-                                        <li><b>ครั้งที่ 6 (7 กันยายน)</b> : การทำนาย (Forecasting)</li>
+                                        <li><b>ครั้งที่ 5 (31 สิงหาคม)</b> : การทำนาย (Forecasting)</li>
+                                        <li><b>ครั้งที่ 6 (7 กันยายน)</b> : ทฤษฎีการแข่งขัน (Game Theory)</li>
                                         <li><b>ครั้งที่ 7 (14 กันยายน)</b> : ทฤษฎีแถวคอย (Queue Theory)</li>
                                         <li><b>ครั้งที่ 8 (21 กันยายน)</b> : ทบทวนก่อนสอบ (08:00 - 11:00) + <span style="color: red;">สอบปลายภาค</span></li>
                                     </ul>
