--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -125,6 +125,27 @@
                                         วันที่ 31 สิงหาคม 2568 มีการสอบย่อยในช่วงเวลา 08:10 - 08:40 น. ไม่มีการสอบย้อนหลัง เช็คคะแนนเข้าเรียน(คะแนนฟรี 1 คะแนน)จากการส่งสอบย่อยครับ
                                     </p>
 
+                                    <h5 style="color: #2600ff; margin-bottom: 0.5rem; border-left: 4px solid #2600ff;background-color: #cecbff; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
+                                        ประกาศงานกลุ่ม
+                                    </h5>
+                                    <p style="color: #2600ff">
+                                        แบ่งกลุ่ม กลุ่มละ 5-6 คน (แบ่งกันเองนะครับ โตๆ กันแล้วอาจารย์เชื่อว่าจัดการเรื่องกลุ่มกันเองได้ครับ ไม่มีการ log รายชื่อคนในกลุ่มใด ๆ ทั้งนั้น)<br>
+                                        <b>กำหนดส่งงานกลุ่มภายในวันที่ 30 กันยายน 2568</b><br>
+                                        <b>รายละเอียด</b>:
+                                        <ul style="padding-left: 24px; color: #2600ff">
+                                            <li>หัวข้อ: การทำนายราคาหน่วยลงทุนกองทุนรวมด้วยตัวแบบการทำนายแบบต่าง ๆ</li>
+                                            <li>รูปแบบ: รายงาน (Paper)</li>
+                                            <li>ความยาว: ไม่เกิน 4 หน้ากระดาษ A4 ประกอบไปด้วย</li>
+                                                <ul style="padding-left: 48px; color: #2600ff">
+                                                    <li>บทนำ: อธิบายว่าทำไมถึงสนใจกองทุนรวมตัวนี้</li>
+                                                    <li>วิธีการเตรียมข้อมูล: อธิบายขั้นตอนการเตรียมข้อมูลสำหรับการวิเคราะห์</li>
+                                                    <li>ผลลัพธ์: นำเสนอผลลัพธ์ที่ได้จากการวิเคราะห์ด้วยวิธีการที่เรียนไปในห้อง (หรือนอกเหนือจากที่เรียนไปก็ได้)</li>
+                                                    <li>สรุป: สรุปผลการวิเคราะห์เชิงเปรียบเทียบ</li>
+                                                </ul>
+                                            <li>รายละเอียดวิธีการทั้งหมด: <a href="https://docs.google.com/document/d/1n02BkPn6lpx6DqF0AwTQbjtBhdcwgYPxMt6Ls9Y4l5M/edit?usp=sharing" target="_blank"><b>เอกสารแนบ</b></a></li>
+                                        </ul>
+                                    </p>
+
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         คำอธิบายรายวิชา
                                     </h4>
