--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -228,6 +228,7 @@
                                         <li><b>การบ้าน 2</b>: Simplex method (due date 16 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw2.pdf">(โจทย์)</a> <a href="../assets/handout/homework/hw2_sol.pdf">(เฉลย)</a></li>
                                         <li><b>การบ้าน 3</b>: Decision Theory and Simulation (due date 23 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw3.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw3_sol.pdf">(เฉลย)</a></li>
                                         <li><b>การบ้าน 4</b>: Markov Analysis (due date 30 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw4.pdf">(โจทย์)</a> <a href="../assets/handout/homework/hw4_sol.pdf">(เฉลย)</a></li>
+                                        <li><b>การบ้าน 5</b>: การทำนายและการประเมิณผลตัวแบบการทำนาย (due date 30 สิงหาคม 15:00 น.) <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw5.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw5_sol.pdf">(เฉลย)</a></li>
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         ข้อสอบ
@@ -237,6 +238,7 @@
                                         <li><b>สอบย่อยครั้งที่ 1</b>: การเขียนกำหนดการเชิงเส้น <a href="../assets/handout/exam/quiz1.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/exam/quiz1_sol.pdf">(เฉลย)</a></li>
                                         <li><b>สอบย่อยครั้งที่ 2</b>: การทำซิมเพล็กซ์ <a href="../assets/handout/exam/quiz2.pdf">(โจทย์)</a> <a href="../assets/handout/exam/quiz2_sol.pdf">(เฉลย)</a></li>
                                         <li><b>สอบกลางภาค</b>: <a href="../assets/handout/exam/midterm.pdf">(โจทย์)</a> <a href="../assets/handout/exam/midterm_sol.pdf">(เฉลย)</a></li>
+                                        <li><b>สอบย่อยครั้งที่ 3</b>: Markov Analysis <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/quiz5.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/quiz5_sol.pdf">(เฉลย)</a></li>
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         วิดีโอเรียนเพิ่มเติม
