--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -215,7 +215,7 @@
                                             <ul style="padding-left: 25px;">
                                                 <!-- <li>การเข้าชั้นเรียน (8%): ถ้าไม่มีสอบย่อยเช็คชื่อเข้าเรียนตอน 08:30, ถ้ามีสอบย่อยนับ</li> -->
                                                 <li>การบ้าน (14%): 7 ครั้ง ส่งออนไลน์ (<span style="color: red;">เช็คแค่ทำส่งหรือไม่ ใครอยากได้ feedback กลับให้แจ้งตอนส่ง</span>)</li>
-                                                <li>สอบย่อย (15%): 5 ครั้งครั้งละ 20 นาที (การเรียนครั้งที่ 2, 3, 5, 6, 7 ออกคล้ายการบ้าน <span style="color: red;">ให้ 1 คะแนนเข้าสอบ + 2 คะแนนจากความถูกต้อง</span>)</li>
+                                                <li>สอบย่อย (5% + 10%): 5 ครั้งครั้งละ 20 นาที (การเรียนครั้งที่ 2, 3, 5, 6, 7 ออกคล้ายการบ้าน <span style="color: red;">ให้ 1 คะแนนเข้าสอบ + 2 คะแนนจากความถูกต้อง</span>)</li>
                                                 <li>งานกลุ่ม (11%): ประกาศโจทย์หลังจบครั้งที่ 7 -> ให้ปรึกษาในครั้งที่ 8 -> ส่ง 21 ตุลาคม</li>
                                             </ul>
                                     </ul>
