--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -228,7 +228,7 @@
                                         <li><b>การบ้าน 2</b>: Simplex method (due date 16 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw2.pdf">(โจทย์)</a> <a href="../assets/handout/homework/hw2_sol.pdf">(เฉลย)</a></li>
                                         <li><b>การบ้าน 3</b>: Decision Theory and Simulation (due date 23 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw3.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw3_sol.pdf">(เฉลย)</a></li>
                                         <li><b>การบ้าน 4</b>: Markov Analysis (due date 30 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw4.pdf">(โจทย์)</a> <a href="../assets/handout/homework/hw4_sol.pdf">(เฉลย)</a></li>
-                                        <li><b>การบ้าน 5</b>: การทำนายและการประเมิณผลตัวแบบการทำนาย (due date 6 กันยายน 15:00 น.) <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw5.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw5_sol.pdf">(เฉลย)</a></li>
+                                        <li><b>การบ้าน 5</b>: การทำนายและการประเมิณผลตัวแบบการทำนาย (due date 6 กันยายน 15:00 น.) <a href="../assets/handout/homework/hw5.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw5_sol.pdf">(เฉลย)</a></li>
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         ข้อสอบ
