--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -200,6 +200,11 @@
                                                 <li>Recording: <a href="https://youtu.be/hN_VQhKP2zk">link</a></li>
                                             </ul></li>
                                         <li><b>ครั้งที่ 5 (31 สิงหาคม)</b> : การทำนาย (Forecasting)</li>
+                                            <ul style="padding-left: 25px;">
+                                                <!-- <li>การเข้าชั้นเรียน (8%): ถ้าไม่มีสอบย่อยเช็คชื่อเข้าเรียนตอน 08:30, ถ้ามีสอบย่อยนับ</li> -->
+                                                <li>Note: <a href="../assets/handout/Quantitative_Analysis_250831.pdf">download</a></li>
+                                                <li>Excel: <a href="../assets/handout/Forecasting-excel.xlsx">link</a></li>
+                                            </ul></li>
                                         <li><b>ครั้งที่ 6 (7 กันยายน)</b> : ทฤษฎีการแข่งขัน (Game Theory)</li>
                                         <li><b>ครั้งที่ 7 (14 กันยายน)</b> : ทฤษฎีแถวคอย (Queue Theory)</li>
                                         <li><b>ครั้งที่ 8 (21 กันยายน)</b> : ทบทวนก่อนสอบ (08:00 - 11:00) + <span style="color: red;">สอบปลายภาค</span></li>
@@ -238,7 +243,7 @@
                                         <li><b>สอบย่อยครั้งที่ 1</b>: การเขียนกำหนดการเชิงเส้น <a href="../assets/handout/exam/quiz1.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/exam/quiz1_sol.pdf">(เฉลย)</a></li>
                                         <li><b>สอบย่อยครั้งที่ 2</b>: การทำซิมเพล็กซ์ <a href="../assets/handout/exam/quiz2.pdf">(โจทย์)</a> <a href="../assets/handout/exam/quiz2_sol.pdf">(เฉลย)</a></li>
                                         <li><b>สอบกลางภาค</b>: <a href="../assets/handout/exam/midterm.pdf">(โจทย์)</a> <a href="../assets/handout/exam/midterm_sol.pdf">(เฉลย)</a></li>
-                                        <li><b>สอบย่อยครั้งที่ 3</b>: Markov Analysis <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/quiz5.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/quiz5_sol.pdf">(เฉลย)</a></li>
+                                        <li><b>สอบย่อยครั้งที่ 3</b>: Markov Analysis <a href="../assets/handout/homework/quiz3.pdf">(โจทย์)</a> <a href="../assets/handout/homework/quiz3_sol.pdf">(เฉลย)</a></li>
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         วิดีโอเรียนเพิ่มเติม
